# socket-lib

./: .gitignore  .travis.yml  CMakeLists.txt  index.html  result_unit.xml
include/socket/: Commander.h  MockStrategy.h  Strategy.h  TCPSocket.h  UDPSocket.h
result_coverage/: index-sort-b.html  index-sort-f.html  index-sort-l.html  index.html
result_coverage/include/socket/: Strategy.h.func-sort-c.html  Strategy.h.func.html  Strategy.h.gcov.html  TCPSocket.h.func-sort-c.html  TCPSocket.h.func.html  TCPSocket.h.gcov.html  index-sort-b.html  index-sort-f.html  index-sort-l.html  index.html
result_coverage/src/: Commander.cpp.func-sort-c.html  Commander.cpp.func.html  Commander.cpp.gcov.html  MockStrategy.cpp.func-sort-c.html  MockStrategy.cpp.func.html  MockStrategy.cpp.gcov.html  Strategy.cpp.func-sort-c.html  Strategy.cpp.func.html  Strategy.cpp.gcov.html  TCPSocket.cpp.func-sort-c.html  TCPSocket.cpp.func.html  TCPSocket.cpp.gcov.html  UDPSocket.cpp.func-sort-c.html  UDPSocket.cpp.func.html  UDPSocket.cpp.gcov.html  index-sort-b.html  index-sort-f.html  index-sort-l.html  index.html
result_coverage/test/: index-sort-b.html  index-sort-f.html  index-sort-l.html  index.html  module_socketlib_skeleton.cpp.func-sort-c.html  module_socketlib_skeleton.cpp.func.html  module_socketlib_skeleton.cpp.gcov.html  unit_TCP_sendMessage.cpp.func-sort-c.html  unit_TCP_sendMessage.cpp.func.html  unit_TCP_sendMessage.cpp.gcov.html
result_coverage/usr/include/c++/4.8/: index-sort-b.html  index-sort-f.html  index-sort-l.html  index.html  iostream.func-sort-c.html  iostream.func.html  iostream.gcov.html  ostream.func-sort-c.html  ostream.func.html  ostream.gcov.html
result_coverage/usr/include/c++/4.8/bits/: allocator.h.func-sort-c.html  allocator.h.func.html  allocator.h.gcov.html  basic_ios.h.func-sort-c.html  basic_ios.h.func.html  basic_ios.h.gcov.html  basic_string.h.func-sort-c.html  basic_string.h.func.html  basic_string.h.gcov.html  basic_string.tcc.func-sort-c.html  basic_string.tcc.func.html  basic_string.tcc.gcov.html  char_traits.h.func-sort-c.html  char_traits.h.func.html  char_traits.h.gcov.html  index-sort-b.html  index-sort-f.html  index-sort-l.html  index.html  ios_base.h.func-sort-c.html  ios_base.h.func.html  ios_base.h.gcov.html  locale_facets.h.func-sort-c.html  locale_facets.h.func.html  locale_facets.h.gcov.html  stl_iterator_base_funcs.h.func-sort-c.html  stl_iterator_base_funcs.h.func.html  stl_iterator_base_funcs.h.gcov.html  stl_iterator_base_types.h.func-sort-c.html  stl_iterator_base_types.h.func.html  stl_iterator_base_types.h.gcov.html
result_coverage/usr/include/c++/4.8/ext/: atomicity.h.func-sort-c.html  atomicity.h.func.html  atomicity.h.gcov.html  index-sort-b.html  index-sort-f.html  index-sort-l.html  index.html  new_allocator.h.func-sort-c.html  new_allocator.h.func.html  new_allocator.h.gcov.html  string_conversions.h.func-sort-c.html  string_conversions.h.func.html  string_conversions.h.gcov.html  type_traits.h.func-sort-c.html  type_traits.h.func.html  type_traits.h.gcov.html
result_coverage/usr/include/c++/5/: index-sort-b.html  index-sort-f.html  index-sort-l.html  index.html  iostream.func-sort-c.html  iostream.func.html  iostream.gcov.html
result_coverage/usr/include/c++/5/bits/: basic_string.h.func-sort-c.html  basic_string.h.func.html  basic_string.h.gcov.html  index-sort-b.html  (+12 more)
result_coverage_clang/: index.html
result_coverage_gcc/: index-sort-b.html  index-sort-f.html  index-sort-l.html  index.html
result_coverage_gcc/include/socket/: Strategy.h.func-sort-c.html  Strategy.h.func.html  Strategy.h.gcov.html  TCPSocket.h.func-sort-c.html  TCPSocket.h.func.html  TCPSocket.h.gcov.html  index-sort-b.html  index-sort-f.html  index-sort-l.html  index.html
result_coverage_gcc/src/: Commander.cpp.func-sort-c.html  Commander.cpp.func.html  Commander.cpp.gcov.html  MockStrategy.cpp.func-sort-c.html  MockStrategy.cpp.func.html  MockStrategy.cpp.gcov.html  Strategy.cpp.func-sort-c.html  Strategy.cpp.func.html  Strategy.cpp.gcov.html  TCPSocket.cpp.func-sort-c.html  TCPSocket.cpp.func.html  TCPSocket.cpp.gcov.html  UDPSocket.cpp.func-sort-c.html  UDPSocket.cpp.func.html  UDPSocket.cpp.gcov.html  index-sort-b.html  index-sort-f.html  index-sort-l.html  index.html
result_coverage_gcc/test/: index-sort-b.html  index-sort-f.html  index-sort-l.html  index.html  module_socketlib_skeleton.cpp.func-sort-c.html  module_socketlib_skeleton.cpp.func.html  module_socketlib_skeleton.cpp.gcov.html  unit_TCP_sendMessage.cpp.func-sort-c.html  unit_TCP_sendMessage.cpp.func.html  unit_TCP_sendMessage.cpp.gcov.html
result_coverage_gcc/usr/include/c++/4.8/: index-sort-b.html  index-sort-f.html  index-sort-l.html  index.html  iostream.func-sort-c.html  iostream.func.html  iostream.gcov.html  ostream.func-sort-c.html  ostream.func.html  ostream.gcov.html
result_coverage_gcc/usr/include/c++/5/: index-sort-b.html  index-sort-f.html  index-sort-l.html  index.html  iostream.func-sort-c.html  iostream.func.html  iostream.gcov.html
result_scan/: index.html  report-974541.html
results/: result_unit.xml
results/result_coverage/: index-sort-b.html  index-sort-f.html  index-sort-l.html  index.html
results/result_coverage/include/socket/: Strategy.h.func-sort-c.html  TCPSocket.h.func.html  TCPSocket.h.gcov.html  index-sort-b.html  index-sort-f.html  index-sort-l.html
results/result_coverage/src/: Commander.cpp.func.html  Commander.cpp.gcov.html  MockStrategy.cpp.func-sort-c.html  MockStrategy.cpp.func.html  MockStrategy.cpp.gcov.html  Strategy.cpp.func-sort-c.html  Strategy.cpp.gcov.html  index.html
results/result_coverage/test/: index.html  module_socketlib_skeleton.cpp.func-sort-c.html  module_socketlib_skeleton.cpp.func.html  module_socketlib_skeleton.cpp.gcov.html
results/result_scan/: report-8a7d8f.html
scripts/: CodeCoverage.cmake  build.sh  deploy.sh  index.html  stage.sh
src/: Commander.cpp  Commander.h  MockStrategy.cpp  Strategy.cpp  TCPSocket.cpp  UDPSocket.cpp  UDPSocket.h
test/: module_socketlib_skeleton.cpp  unit_TCP_sendMessage.cpp
(+122 files in other folders)
